# PicoPET

./: CMakeLists.txt  LICENSE  README.md  counter.c  counter.h  extClk.c  extClk.h  indicator_led.pio  picoDIV.pio  picoPET.c  picoPET.h  picoPET.pio  picoPET_mp.pio  picoPET_sp.pio
doc/: Chassis.drawio  EasyEDA_SCH-PicoPET_2021-11-24.json
